refactor: simplify TenantRole replacing IsSystem/IsEditable/IsDeletable with IsOwner
